# random-quote-generator

./: pyproject.toml
random_quote_generator/: quotes.py
