[tool.poetry]
name = "random-quote-generator"
version = "0.1.0"
description = ""
authors = ["Andrew Casey <accasey@hotmail.com.au>"]
readme = "README.md"
packages = [{include = "random_quote_generator"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
black = "^23.1.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
bandit = "^1.7.4"
safety = "2.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
